include/dss_capi.h

    DSS_CAPI_DLL void DSSProgress_Close(void);
    /*! 
    Caption to appear on the bottom of the DSS Progress form.
    */
    DSS_CAPI_DLL void DSSProgress_Set_Caption(const char* Value);
    /*! 
    Percent progress to indicate [0..100]
    */
    DSS_CAPI_DLL void DSSProgress_Set_PctProgress(int32_t Value);
    DSS_CAPI_DLL void DSSProgress_Show(void);